src/instances/snapshots/rustsat__instances__opt__tests__normalize_duplicate_lit_soft_clause.snap
---
source: src/instances/opt.rs
expression: "{\n    let mut obj = super::Objective::default();\n    obj.add_soft_clause(42, clause![lit![1], lit![1]]); obj.normalize()\n}"
---
Unweighted:
  offset: 0
  unit_weight: 42
  soft_lits:
    - lidx: 3
  soft_clauses: []
