src/instances/snapshots/rustsat__instances__opt__tests__normalize_negated_soft_lit.snap
---
source: src/instances/opt.rs
expression: "{\n    let mut obj = super::Objective::default();\n    obj.add_soft_clause(42, clause![lit![1], lit![1]]);\n    obj.add_soft_lit(23, lit![1]); obj.normalize()\n}"
---
Unweighted:
  offset: 23
  unit_weight: 19
  soft_lits:
    - lidx: 3
  soft_clauses: []
