src/instances/snapshots/rustsat__instances__opt__tests__normalize_negated_soft_lit_unweighted.snap
---
source: src/instances/opt.rs
expression: "{\n    let mut obj = super::Objective::default();\n    obj.add_soft_clause(42, clause![lit![1], lit![1]]);\n    obj.add_soft_lit(42, lit![1]); obj.normalize()\n}"
---
Unweighted:
  offset: 42
  unit_weight: ~
  soft_lits: []
  soft_clauses: []
